# references-pattern-api

./: CMakeLists.txt  README.md
example/: Node.hpp  NodeImpl.hpp  main.cpp  original_api.hpp  reference_api.hpp
include/refapi/: Reference.hpp  macros.hpp  refapi.hpp
